--- a/public/src/css/styles/_premium.scss
+++ b/public/src/css/styles/_premium.scss
@@ -4,6 +4,7 @@ font-family: $fontStyle1;
 
 .main-page-container{
   padding-top: 10vh;
+  background-color: white;
 
   // position: fixed;
 }
@@ -25,19 +26,23 @@ font-family: $fontStyle1;
 .options{
   color: $yellow;
 }
+
 .body-wrapper{
-  // width: 75%;
-  text-align: center;
-  margin-top: 36px;
+  // margin-top: 36px;
+  margin: 36px 10vw 0vh 10vw;
+}
+.content-wrapper{
 
 }
-.body-container{
+.title-container{
 padding-top: 10px;
+text-align: center;
 }
 .image-size{
   height: 25vh;
   align-items: center;
 }
+
 
 // .parallax-container{
 //   color: white;
@@ -59,6 +64,7 @@ padding-top: 10px;
   }
   .option-wrapper{
     display: flex;
+    height: 5vh;
   }
 }
 
